--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpg-game",
-  "version": "3.0.0-alpha",
+  "version": "3.0.0-alpha.2",
   "description": "",
   "main": "index.js",
   "types": "index.d.ts",
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "webpack",
+    "build": "rimraf dist && webpack",
     "dev": "webpack -w",
     "start": "node dist/server"
   },
@@ -27,6 +27,8 @@
     ]
   },
   "devDependencies": {
+    "@rpgjs/compiler": "^3.0.0-alpha.2",
+    "rimraf": "^3.0.2",
     "@types/jest": "^26.0.19",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
@@ -35,15 +37,15 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@rpgjs/client": "^3.0.0-alpha.1",
-    "@rpgjs/compiler": "^3.0.0-alpha.1",
+    "@rpgjs/admin-panel": "^3.0.0-alpha.2",
+    "@rpgjs/client": "^3.0.0-alpha.2",
     "@rpgjs/database": "^3.0.0-alpha",
-    "@rpgjs/default-gui": "^3.0.0-alpha",
-    "@rpgjs/server": "^3.0.0-alpha.1",
-    "@rpgjs/standalone": "^3.0.0-alpha.1",
-    "@rpgjs/starter-kit-client": "^3.0.0-alpha.1",
-    "@rpgjs/starter-kit-server": "^3.0.0-alpha.1",
-    "@rpgjs/testing": "^3.0.0-alpha.1",
+    "@rpgjs/default-gui": "^3.0.0-alpha.2",
+    "@rpgjs/server": "^3.0.0-alpha.2",
+    "@rpgjs/standalone": "^3.0.0-alpha.2",
+    "@rpgjs/starter-kit-client": "^3.0.0-alpha.2",
+    "@rpgjs/starter-kit-server": "^3.0.0-alpha.2",
+    "@rpgjs/testing": "^3.0.0-alpha.2",
     "express": "^4.17.1",
     "socket.io": "^3.0.4",
     "vue": "^3.0.4"
