--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpg-game",
-  "version": "3.0.0-alpha.2",
+  "version": "3.0.0-alpha.4.4",
   "description": "",
   "main": "index.js",
   "types": "index.d.ts",
@@ -21,33 +21,35 @@
       "\\.ts$": "ts-jest",
       "\\.tmx$": "<rootDir>/node_modules/@rpgjs/compiler/tmx-loader/index.js"
     },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(@rpgjs/.+)/)/"
+    ],
     "moduleFileExtensions": [
       "ts",
       "js"
     ]
   },
   "devDependencies": {
-    "@rpgjs/compiler": "^3.0.0-alpha.2",
-    "rimraf": "^3.0.2",
-    "@types/jest": "^26.0.19",
+    "@rpgjs/compiler": "^3.0.0-alpha.4.4",
+    "@types/jest": "^26.0.22",
     "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3",
-    "webpack": "^4.44.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.2.3",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@rpgjs/client": "^3.0.0-alpha.3",
-    "@rpgjs/compiler": "^3.0.0-alpha.2",
-    "@rpgjs/database": "^3.0.0-alpha",
-    "@rpgjs/default-gui": "^3.0.0-alpha.3",
-    "@rpgjs/server": "^3.0.0-alpha.3",
-    "@rpgjs/standalone": "^3.0.0-alpha.3",
-    "@rpgjs/starter-kit-client": "^3.0.0-alpha.3",
-    "@rpgjs/starter-kit-server": "^3.0.0-alpha.3",
-    "@rpgjs/testing": "^3.0.0-alpha.3",
+    "@rpgjs/client": "^3.0.0-alpha.4.4",
+    "@rpgjs/database": "^3.0.0-alpha.4.4",
+    "@rpgjs/default-gui": "^3.0.0-alpha.4.4",
+    "@rpgjs/server": "^3.0.0-alpha.4.4",
+    "@rpgjs/standalone": "^3.0.0-alpha.4.4",
+    "@rpgjs/starter-kit-client": "^3.0.0-alpha.4.4",
+    "@rpgjs/starter-kit-server": "^3.0.0-alpha.4.4",
+    "@rpgjs/testing": "^3.0.0-alpha.4.4",
     "express": "^4.17.1",
-    "socket.io": "^3.0.4",
-    "vue": "^3.0.4"
+    "socket.io": "^3.1.2",
+    "vue": "^3.0.9"
   }
 }
