--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpg-game",
-  "version": "3.0.0-alpha.4.4",
+  "version": "3.0.0-alpha.5.1",
   "description": "",
   "main": "index.js",
   "types": "index.d.ts",
@@ -40,16 +40,17 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@rpgjs/client": "^3.0.0-alpha.4.4",
-    "@rpgjs/database": "^3.0.0-alpha.4.4",
-    "@rpgjs/default-gui": "^3.0.0-alpha.4.4",
-    "@rpgjs/server": "^3.0.0-alpha.4.4",
-    "@rpgjs/standalone": "^3.0.0-alpha.4.4",
-    "@rpgjs/starter-kit-client": "^3.0.0-alpha.4.4",
-    "@rpgjs/starter-kit-server": "^3.0.0-alpha.4.4",
-    "@rpgjs/testing": "^3.0.0-alpha.4.4",
+    "@rpgjs/client": "^3.0.0-alpha.5.1",
+    "@rpgjs/database": "^3.0.0-alpha.5.1",
+    "@rpgjs/default-gui": "^3.0.0-alpha.5.1",
+    "@rpgjs/server": "^3.0.0-alpha.5.1",
+    "@rpgjs/standalone": "^3.0.0-alpha.5.1",
+    "@rpgjs/starter-kit-client": "^3.0.0-alpha.5.1",
+    "@rpgjs/starter-kit-server": "^3.0.0-alpha.5.1",
+    "@rpgjs/testing": "^3.0.0-alpha.5.1",
     "express": "^4.17.1",
     "socket.io": "^3.1.2",
+    "socket.io-client": "^4.0.1",
     "vue": "^3.0.9"
   }
 }
