--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "my-game",
-    "version": "3.0.0-alpha.13",
+    "version": "3.0.0-beta",
     "description": "",
     "main": "dist/server.js",
     "types": "index.d.ts",
@@ -17,20 +17,21 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "@rpgjs/client": "^3.0.0-alpha.13",
-        "@rpgjs/default-gui": "^3.0.0-alpha.13",
-        "@rpgjs/mobile-gui": "^3.0.0-alpha.13",
-        "@rpgjs/server": "^3.0.0-alpha.13",
-        "@rpgjs/standalone": "^3.0.0-alpha.13",
-        "@rpgjs/starter-kit": "^3.0.0-alpha.13",
-        "@rpgjs/testing": "^3.0.0-alpha.13",
+        "@rpgjs/client": "^3.0.0-beta-1",
+        "@rpgjs/default-gui": "^3.0.0-beta-1",
+        "@rpgjs/mobile-gui": "^3.0.0-beta-1",
+        "@rpgjs/server": "^3.0.0-beta-1",
+        "@rpgjs/standalone": "^3.0.0-beta-1",
+        "@rpgjs/gamepad": "^3.0.0-beta-1",
+        "@rpgjs/starter-kit": "^3.0.0-beta-1",
+        "@rpgjs/testing": "^3.0.0-beta-1",
         "express": "4.17.1",
         "socket.io": "4.1.2",
         "socket.io-client": "4.1.2",
         "vue": "3.0.11"
     },
     "devDependencies": {
-        "@rpgjs/compiler": "^3.0.0-alpha.13",
+        "@rpgjs/compiler": "^3.0.0-beta-1",
         "@types/jest": "26.0.23",
         "canvas": "2.8.0",
         "jest": "27.0.4",
