--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "keywords": [],
     "author": "",
     "license": "MIT",
+    "engines": { 
+        "node" : "<15" 
+    },
     "dependencies": {
         "@rpgjs/client": "^3.0.0-beta.2",
         "@rpgjs/default-gui": "^3.0.0-beta.2",
