--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@rpgjs/mobile-gui": "^3.0.0-beta.6",
         "@rpgjs/server": "^3.0.0-beta.6",
         "@rpgjs/standalone": "^3.0.0-beta.6",
+        "@rpgjs/starter-kit": "^3.0.0-beta.6",
         "@rpgjs/testing": "^3.0.0-beta.6",
         "express": "4.17.1",
         "socket.io": "4.1.2",
