--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
         "node": "<15"
     },
     "dependencies": {
-        "@rpgjs/client": "^3.0.0-rc",
-        "@rpgjs/default-gui": "^3.0.0-rc",
-        "@rpgjs/gamepad": "^3.0.0-rc",
-        "@rpgjs/mobile-gui": "^3.0.0-rc",
-        "@rpgjs/server": "^3.0.0-rc",
-        "@rpgjs/standalone": "^3.0.0-rc",
-        "@rpgjs/testing": "^3.0.0-rc",
+        "@rpgjs/client": "^3.0.1",
+        "@rpgjs/default-gui": "^3.0.0",
+        "@rpgjs/gamepad": "^3.0.0",
+        "@rpgjs/mobile-gui": "^3.0.0",
+        "@rpgjs/server": "^3.0.0",
+        "@rpgjs/standalone": "^3.0.0",
+        "@rpgjs/testing": "^3.0.0",
         "express": "4.17.1",
         "socket.io": "4.1.2",
         "socket.io-client": "4.1.2",
         "vue": "^3.2.37"
     },
     "devDependencies": {
-        "@rpgjs/compiler": "^3.0.0-rc",
+        "@rpgjs/compiler": "^3.0.0",
         "@types/jest": "26.0.23",
         "canvas": "2.8.0",
         "jest": "27.0.4",
