--- a/package.json
+++ b/package.json
@@ -17,28 +17,19 @@
     "author": "",
     "license": "MIT",
     "engines": {
-        "node": "<15"
+        "node": ">=18"
     },
     "dependencies": {
-        "@rpgjs/client": "^3.0.1",
-        "@rpgjs/default-gui": "^3.0.0",
-        "@rpgjs/gamepad": "^3.0.0",
-        "@rpgjs/mobile-gui": "^3.0.0",
-        "@rpgjs/server": "^3.0.0",
-        "@rpgjs/standalone": "^3.0.0",
-        "@rpgjs/testing": "^3.0.0",
-        "express": "4.17.1",
-        "socket.io": "4.1.2",
-        "socket.io-client": "4.1.2",
-        "vue": "^3.2.37"
+        "@rpgjs/client": "^4.0.0-beta.9",
+        "@rpgjs/default-gui": "^4.0.0-beta.9",
+        "@rpgjs/gamepad": "^4.0.0-beta.9",
+        "@rpgjs/mobile-gui": "^4.0.0-beta.9",
+        "@rpgjs/server": "^4.0.0-beta.9",
+        "@rpgjs/standalone": "^4.0.0-beta.9",
+        "socket.io-client": "4.6.1"
     },
     "devDependencies": {
-        "@rpgjs/compiler": "^3.0.0",
-        "@types/jest": "26.0.23",
-        "canvas": "2.8.0",
-        "jest": "27.0.4",
-        "rimraf": "3.0.2",
-        "ts-jest": "27.0.2",
-        "typescript": "4.3.2"
+        "@rpgjs/compiler": "^4.0.0-beta.9",
+        "typescript": "5.0.4"
     }
 }
